After extending the code base to support shopping cart, and products populating, all the tests pass
