# vendors/serializers.py
@@ -5,7 +5,8 @@ from .models import Vendor, Product
 class ProductSerializer(serializers.ModelSerializer):
     class Meta:
         model = Product
-        fields = '__all__'
+        fields = ('id', 'vendor', 'product_name', 'product_sell_price', 'product_purchase_price', 'created_at', 'updated_at')
+        read_only_fields = ('created_at', 'updated_at')
 
 
 class VendorSerializer(serializers.ModelSerializer):
@@ -13,5 +14,5 @@ class VendorSerializer(serializers.ModelSerializer):
 
     class Meta:
         model = Vendor
-        fields = ('id', 'owner', 'business_name', 'is_mobile', 'lat', 'lng', 'address', 'categories', 'products')
-        read_only_fields = ('owner',)
+        fields = ('id', 'owner', 'business_name', 'is_mobile', 'lat', 'lng', 'address', 'categories', 'products', 'visit_count', 'stripe_account_id')
+        read_only_fields = ('owner', 'id')
